Created circle shape and filled listview with sample data

--- a/app/src/main/res/layout/content_main_list.xml
+++ b/app/src/main/res/layout/content_main_list.xml
@@ -10,6 +10,7 @@
     tools:showIn="@layout/activity_main_list">
 
     <ListView
+        android:id="@+id/itemListView"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
