--- a/app/src/main/res/layout/content_main_list_item.xml
+++ b/app/src/main/res/layout/content_main_list_item.xml
@@ -8,19 +8,20 @@
     android:layout_height="wrap_content">
 
     <ImageView
-        android:id="@+id/color"
+        android:id="@+id/iv_item_color"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@mipmap/ic_launcher_round"
-        android:layout_marginLeft="8dp"
+        android:background="@drawable/circle"
+        android:layout_marginLeft="16dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="8dp" />
+        android:layout_marginBottom="8dp"
+        app:layout_constraintVertical_bias="0.333" />
 
     <TextView
-        android:id="@+id/label"
+        android:id="@+id/tv_item_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="TextView"
@@ -30,13 +31,13 @@
         android:layout_marginTop="8dp" />
 
     <TextView
-        android:id="@+id/description"
+        android:id="@+id/tv_item_description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="TextView"
         android:layout_marginLeft="72dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/label" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_item_label" />
 
 </android.support.constraint.ConstraintLayout>
