--- a/app/src/main/res/layout/content_edit_item.xml
+++ b/app/src/main/res/layout/content_edit_item.xml
@@ -8,19 +8,44 @@
     tools:context="com.example.mborzenkov.readlaterlist.EditItem"
     tools:showIn="@layout/activity_edit_item">
 
-    <android.support.design.widget.TextInputLayout
+    <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/fNameLayout"
-        android:layout_marginTop="10dp">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <EditText
-            android:id="@+id/et_edit_item_description"
-            android:layout_width="match_parent"
+        <ImageButton
+            android:id="@+id/ib_edit_item_color"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:ems="10"
-            android:hint="Title"
-            android:inputType="textMultiLine"/>
-    </android.support.design.widget.TextInputLayout>
+            android:background="@drawable/circle"
+            android:layout_marginLeft="8dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/textInputLayout"
+            android:layout_marginTop="16dp" />
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/textInputLayout"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="8dp"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintLeft_toRightOf="@+id/ib_edit_item_color"
+            android:layout_marginLeft="8dp">
+
+            <EditText
+                android:id="@+id/et_edit_item_description"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:hint="Title"
+                android:inputType="textMultiLine" />
+        </android.support.design.widget.TextInputLayout>
+
+    </android.support.constraint.ConstraintLayout>
+
+
 
 </android.support.v4.widget.NestedScrollView>
