--- a/app/src/main/res/layout/content_edit_item.xml
+++ b/app/src/main/res/layout/content_edit_item.xml
@@ -17,10 +17,10 @@
             android:id="@+id/ib_edit_item_color"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/circle"
-            android:layout_marginLeft="8dp"
+            android:background="@drawable/item_color_circle"
+            android:layout_marginLeft="16dp"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/textInputLayout"
+            app:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="16dp" />
 
         <android.support.design.widget.TextInputLayout
@@ -31,10 +31,8 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="8dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="8dp"
-            app:layout_constraintLeft_toRightOf="@+id/ib_edit_item_color"
-            android:layout_marginLeft="8dp">
+            android:layout_marginLeft="72dp"
+            app:layout_constraintLeft_toLeftOf="parent">
 
             <EditText
                 android:id="@+id/et_edit_item_description"
