--- a/app/src/main/res/layout/content_main_list_item.xml
+++ b/app/src/main/res/layout/content_main_list_item.xml
@@ -11,7 +11,7 @@
         android:id="@+id/iv_item_color"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/circle"
+        android:background="@drawable/item_color_circle"
         android:layout_marginLeft="16dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
