--- a/app/src/main/res/layout/activity_colorpicker.xml
+++ b/app/src/main/res/layout/activity_colorpicker.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.mborzenkov.readlaterlist.ColorPicker">
+    tools:context="com.example.mborzenkov.readlaterlist.Activity.ColorPicker">
 
     <HorizontalScrollView
         android:id="@+id/horizontalScrollView"
