--- a/app/src/main/res/layout/activity_colorpicker.xml
+++ b/app/src/main/res/layout/activity_colorpicker.xml
@@ -27,7 +27,7 @@
 
     <ImageButton
         android:id="@+id/imageButton_chosen"
-        style="@style/ColoredSquare"
+        style="@style/ColorPicker.ColoredCircle"
         android:onClick="clickOnChosenSquare"
         android:clickable="true"
         android:layout_marginTop="16dp"
@@ -38,7 +38,7 @@
 
     <TextView
         android:id="@+id/textView_chosen"
-        style="@style/Labels"
+        style="@style/ColorPicker.Text"
         android:text="@string/label_chosen_color"
 
         android:layout_marginTop="8dp"
@@ -60,7 +60,7 @@
 
     <TextView
         android:id="@+id/textView_favorites"
-        style="@style/Labels"
+        style="@style/ColorPicker.Text"
         android:text="@string/label_favorites"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout_favorites"
@@ -70,7 +70,7 @@
 
     <TextView
         android:id="@+id/textView_RGB_label"
-        style="@style/Labels"
+        style="@style/ColorPicker.Text"
         android:text="@string/RGB"
         android:layout_marginTop="32dp"
         android:layout_marginRight="8dp"
@@ -79,7 +79,7 @@
 
     <TextView
         android:id="@+id/textView_RGB_value"
-        style="@style/Labels"
+        style="@style/ColorPicker.Text"
         tools:text="@string/RGB_VAL"
         android:layout_marginTop="8dp"
         android:layout_marginRight="8dp"
@@ -88,7 +88,7 @@
 
     <TextView
         android:id="@+id/textView_HSV_label"
-        style="@style/Labels"
+        style="@style/ColorPicker.Text"
         android:text="@string/HSV"
         android:layout_marginTop="32dp"
         android:layout_marginLeft="8dp"
@@ -99,7 +99,7 @@
 
     <TextView
         android:id="@+id/textView_HSV_value"
-        style="@style/Labels"
+        style="@style/ColorPicker.Text"
         tools:text="@string/HSV_VAL"
         android:layout_marginTop="8dp"
         android:layout_marginLeft="8dp"
