--- a/app/src/main/res/layout/activity_edit_item.xml
+++ b/app/src/main/res/layout/activity_edit_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -15,25 +16,17 @@
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar_edit_item"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize" />
+            style="@style/Toolbar" />
 
         <android.support.design.widget.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
             android:layout_below="@+id/fNameLayout"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="32dp"
-            android:layout_marginLeft="72dp"
-            android:layout_marginRight="32dp"
-            app:layout_scrollFlags="snap|exitUntilCollapsed">
+            style="@style/EditList.AppBarTextField">
 
             <EditText
                 android:id="@+id/et_edit_item_title"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Title"
-                app:layout_scrollFlags="snap|exitUntilCollapsed"/>
+                android:layout_height="match_parent"
+                android:hint="@string/edititem_label_hint" />
 
         </android.support.design.widget.TextInputLayout>
 
@@ -43,11 +36,9 @@
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab_edit_item_save"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/fab_margin"
+        style="@style/EditList.FABSave"
         app:layout_anchor="@id/appbar_edit_item"
         app:layout_anchorGravity="bottom|end"
-        app:srcCompat="@android:drawable/ic_dialog_email" />
+        app:srcCompat="@android:drawable/ic_menu_send" />
 
 </android.support.design.widget.CoordinatorLayout>
