--- a/app/src/main/res/layout/activity_main_list.xml
+++ b/app/src/main/res/layout/activity_main_list.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -13,24 +14,18 @@
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar_main_list"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary" />
+            style="@style/Toolbar" />
 
     <ListView
         android:id="@+id/listview_main_list"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        style="@style/MainList.List" />
 
     </LinearLayout>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab_item_add"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@android:drawable/ic_dialog_email" />
+        style="@style/MainList.FABAdd"
+        app:srcCompat="@drawable/ic_add_24dp" />
 
     <ProgressBar
         android:id="@+id/pb_main_loading"
