--- a/app/src/main/res/layout/content_colorpicker_favorites.xml
+++ b/app/src/main/res/layout/content_colorpicker_favorites.xml
@@ -10,7 +10,7 @@
 
     <ImageButton
         android:id="@+id/imageButton_favorite_color"
-        style="@style/FavoritesSquare"
+        style="@style/ColorPicker.Favorite"
         android:background="@drawable/colorpicker_circle"
         android:onClick="clickOnFavSquare"
         android:clickable="true"
@@ -19,7 +19,7 @@
 
     <ImageView
         android:id="@+id/imageView_fav_star"
-        style="@style/FavoritesStar"
+        style="@style/ColorPicker.Star"
         app:srcCompat="@android:drawable/btn_star"
         android:layout_alignTop="@+id/imageButton_favorite_color"
         android:layout_alignRight="@+id/imageButton_favorite_color"
