--- a/app/src/main/res/layout/content_edit_item.xml
+++ b/app/src/main/res/layout/content_edit_item.xml
@@ -9,41 +9,32 @@
     tools:showIn="@layout/activity_edit_item">
 
     <android.support.constraint.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        style="@style/EditList.Item">
 
         <ImageButton
             android:id="@+id/ib_edit_item_color"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            style="@style/EditList.Icon"
             android:background="@drawable/item_color_circle"
-            android:layout_marginLeft="16dp"
-            app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="16dp" />
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:contentDescription="@string/edititem_color_hint"/>
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/textInputLayout"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="8dp"
-            app:layout_constraintRight_toRightOf="parent"
+            style="@style/EditList.TextField"
             app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="8dp"
-            android:layout_marginLeft="72dp"
-            app:layout_constraintLeft_toLeftOf="parent">
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent">
 
             <EditText
                 android:id="@+id/et_edit_item_description"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:hint="Title"
+                android:hint="@string/edititem_description_hint"
                 android:inputType="textMultiLine" />
+
         </android.support.design.widget.TextInputLayout>
 
     </android.support.constraint.ConstraintLayout>
-
-
 
 </android.support.v4.widget.NestedScrollView>
