--- a/app/src/main/res/layout/content_main_list_item.xml
+++ b/app/src/main/res/layout/content_main_list_item.xml
@@ -3,41 +3,35 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    style="@style/MainList.Item">
 
     <ImageView
         android:id="@+id/iv_item_color"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        style="@style/MainList.Icon"
         android:background="@drawable/item_color_circle"
-        android:layout_marginLeft="16dp"
-        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintVertical_bias="0.333" />
+        app:layout_constraintLeft_toLeftOf="parent" />
 
     <TextView
         android:id="@+id/tv_item_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        style="@style/MainList.PrimaryText"
         android:text="TextView"
-        android:layout_marginLeft="72dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="8dp" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <TextView
         android:id="@+id/tv_item_description"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        style="@style/MainList.SecondaryText"
         android:text="TextView"
-        android:layout_marginLeft="72dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/tv_item_label" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_item_label"/>
+
+    <View
+        style="@style/Divider"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
 </android.support.constraint.ConstraintLayout>
