--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -54,11 +54,13 @@
     <style name="MainList.PrimaryText" parent="MainList.Text">
         <item name="android:textSize">16sp</item>
         <item name="android:textColor">@color/primary_text</item>
+        <item name="android:singleLine">true</item>
     </style>
     <style name="MainList.SecondaryText" parent="MainList.Text">
         <item name="android:textSize">14sp</item>
         <item name="android:textColor">@color/secondary_text</item>
         <item name="android:layout_marginBottom">20dp</item>
+        <item name="android:lines">2</item>
     </style>
     <style name="MainList.FABAdd">
         <item name="android:layout_width">56dp</item>
