--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -97,6 +97,7 @@
         <item name="android:layout_marginRight">72dp</item>
         <item name="android:layout_marginBottom">32dp</item>
         <item name="android:textColor">@color/primary_text</item>
+        <item name="android:singleLine">true</item>
     </style>
     <style name="EditList.FABSave">
         <item name="android:layout_width">56dp</item>
