--- a/app/src/main/res/layout/activity_edit_item.xml
+++ b/app/src/main/res/layout/activity_edit_item.xml
@@ -19,9 +19,10 @@
 
         <android.support.design.widget.TextInputLayout
             android:layout_below="@+id/fNameLayout"
-            style="@style/EditList.AppBarTextField">
+            style="@style/EditList.AppBarTextInputLayout">
 
             <EditText
+                style="@style/EditList.AppBarTextField"
                 android:id="@+id/et_edit_item_title"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
