--- a/app/src/main/res/layout/content_edit_item.xml
+++ b/app/src/main/res/layout/content_edit_item.xml
@@ -21,12 +21,13 @@
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/textInputLayout"
-            style="@style/EditList.TextField"
+            style="@style/EditList.TextInputLayout"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent">
 
             <EditText
+                style="@style/EditList.TextField"
                 android:id="@+id/et_edit_item_description"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
