--- a/app/src/main/res/layout/activity_edit_item.xml
+++ b/app/src/main/res/layout/activity_edit_item.xml
@@ -18,12 +18,13 @@
             style="@style/Toolbar" />
 
         <android.support.design.widget.TextInputLayout
-            android:layout_below="@+id/fNameLayout"
-            style="@style/EditList.AppBarTextInputLayout">
+            android:id="@+id/til_edit_item_label"
+            style="@style/EditList.AppBarTextInputLayout"
+            app:errorEnabled="true">
 
             <EditText
+                android:id="@+id/et_edit_item_label"
                 style="@style/EditList.AppBarTextField"
-                android:id="@+id/et_edit_item_title"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:hint="@string/edititem_label_hint" />
