--- a/app/src/main/res/layout/content_edit_item.xml
+++ b/app/src/main/res/layout/content_edit_item.xml
@@ -20,15 +20,15 @@
             android:contentDescription="@string/edititem_color_hint"/>
 
         <android.support.design.widget.TextInputLayout
-            android:id="@+id/textInputLayout"
+            android:id="@+id/til_edit_item_description"
             style="@style/EditList.TextInputLayout"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent">
 
             <EditText
-                style="@style/EditList.TextField"
                 android:id="@+id/et_edit_item_description"
+                style="@style/EditList.TextField"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:hint="@string/edititem_description_hint"
