--- a/app/src/main/res/menu/menu_main_list.xml
+++ b/app/src/main/res/menu/menu_main_list.xml
@@ -3,6 +3,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.example.mborzenkov.readlaterlist.activity.MainList">
 
+    <item
+        android:id="@+id/mainlist_action_delete_all"
+        android:orderInCategory="100"
+        android:title="@string/mainlist_menu_delete_all"
+        app:showAsAction="never" />
 
+    <item
+        android:id="@+id/mainlist_action_add_placeholders"
+        android:orderInCategory="100"
+        android:title="@string/mainlist_menu_add_placeholders"
+        app:showAsAction="never" />
 
 </menu>
