--- a/app/src/main/res/layout-land/activity_colorpicker.xml
+++ b/app/src/main/res/layout-land/activity_colorpicker.xml
@@ -35,36 +35,36 @@
     <ImageButton
         android:id="@+id/imageButton_chosen"
         style="@style/ColorPicker.ColoredCircle"
-        android:onClick="clickOnChosenSquare"
         android:clickable="true"
-        android:layout_marginTop="16dp"
+        android:onClick="clickOnChosenSquare"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView"
-        tools:background="@drawable/colorpicker_circle"
-        app:srcCompat="@drawable/ic_check_24dp"/>
+        app:srcCompat="@drawable/ic_check_24dp"
+        tools:background="@drawable/colorpicker_circle" />
 
     <TextView
         android:id="@+id/textView_chosen"
         style="@style/ColorPicker.Text"
         android:text="@string/label_chosen_color"
 
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="4dp"
         app:layout_constraintTop_toBottomOf="@+id/imageButton_chosen"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        />
+        android:layout_marginRight="0dp"
+        app:layout_constraintRight_toRightOf="@+id/imageButton_chosen"
+        android:layout_marginLeft="0dp"
+        app:layout_constraintLeft_toLeftOf="@+id/imageButton_chosen" />
 
     <LinearLayout
         android:id="@+id/linearLayout_favorites"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginTop="16dp"
-        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView_chosen"
-        tools:minHeight="100dp"/>
+        tools:minHeight="80dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView"
+        app:layout_constraintLeft_toRightOf="@+id/imageButton_chosen"
+        android:layout_marginLeft="0dp" />
 
     <TextView
         android:id="@+id/textView_favorites"
@@ -72,47 +72,48 @@
         android:text="@string/label_favorites"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout_favorites"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        />
+        android:layout_marginRight="0dp"
+        app:layout_constraintRight_toRightOf="@+id/linearLayout_favorites"
+        android:layout_marginLeft="0dp"
+        app:layout_constraintLeft_toLeftOf="@+id/linearLayout_favorites" />
 
     <TextView
         android:id="@+id/textView_RGB_label"
         style="@style/ColorPicker.Text"
         android:text="@string/RGB"
-        android:layout_marginTop="32dp"
-        android:layout_marginRight="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView"
-        app:layout_constraintRight_toLeftOf="@+id/imageButton_chosen"/>
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView_chosen"
+        android:layout_marginLeft="16dp"
+        app:layout_constraintLeft_toLeftOf="parent" />
 
     <TextView
         android:id="@+id/textView_RGB_value"
         style="@style/ColorPicker.Text"
         tools:text="@string/RGB_VAL"
+        app:layout_constraintLeft_toRightOf="@+id/textView_RGB_label"
+        android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
-        android:layout_marginRight="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView_RGB_label"
-        app:layout_constraintRight_toLeftOf="@+id/imageButton_chosen"/>
+        app:layout_constraintTop_toBottomOf="@+id/textView_chosen" />
 
     <TextView
         android:id="@+id/textView_HSV_label"
         style="@style/ColorPicker.Text"
         android:text="@string/HSV"
-        android:layout_marginTop="32dp"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView"
-        app:layout_constraintLeft_toRightOf="@+id/imageButton_chosen"/>
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="0dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView_RGB_label"
+        app:layout_constraintLeft_toLeftOf="parent" />
 
 
 
     <TextView
         android:id="@+id/textView_HSV_value"
         style="@style/ColorPicker.Text"
-        tools:text="@string/HSV_VAL"
-        android:layout_marginTop="8dp"
+        android:text="@string/HSV_VAL"
+        app:layout_constraintLeft_toRightOf="@+id/textView_HSV_label"
         android:layout_marginLeft="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView_HSV_label"
-        app:layout_constraintLeft_toRightOf="@+id/imageButton_chosen"/>
+        android:layout_marginTop="0dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView_RGB_value" />
 
 
 </android.support.constraint.ConstraintLayout>
