--- a/app/src/main/res/layout-land/activity_colorpicker.xml
+++ b/app/src/main/res/layout-land/activity_colorpicker.xml
@@ -45,7 +45,7 @@
     <TextView
         android:id="@+id/textView_chosen"
         style="@style/ColorPicker.Text"
-        android:text="@string/label_chosen_color"
+        android:text="@string/colorpicker_chosen_label"
 
         android:layout_marginTop="4dp"
         app:layout_constraintTop_toBottomOf="@+id/imageButton_chosen"
@@ -69,7 +69,7 @@
     <TextView
         android:id="@+id/textView_favorites"
         style="@style/ColorPicker.Text"
-        android:text="@string/label_favorites"
+        android:text="@string/colorpicker_favorites_label"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout_favorites"
         android:layout_marginRight="0dp"
@@ -80,7 +80,7 @@
     <TextView
         android:id="@+id/textView_RGB_label"
         style="@style/ColorPicker.Text"
-        android:text="@string/RGB"
+        android:text="@string/colorpicker_RGB"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/textView_chosen"
         android:layout_marginLeft="16dp"
@@ -89,7 +89,7 @@
     <TextView
         android:id="@+id/textView_RGB_value"
         style="@style/ColorPicker.Text"
-        tools:text="@string/RGB_VAL"
+        tools:text="@string/colorpicker_RGB_VAL"
         app:layout_constraintLeft_toRightOf="@+id/textView_RGB_label"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
@@ -98,7 +98,7 @@
     <TextView
         android:id="@+id/textView_HSV_label"
         style="@style/ColorPicker.Text"
-        android:text="@string/HSV"
+        android:text="@string/colorpicker_HSV"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="0dp"
         app:layout_constraintTop_toBottomOf="@+id/textView_RGB_label"
@@ -109,7 +109,7 @@
     <TextView
         android:id="@+id/textView_HSV_value"
         style="@style/ColorPicker.Text"
-        android:text="@string/HSV_VAL"
+        android:text="@string/colorpicker_HSV_VAL"
         app:layout_constraintLeft_toRightOf="@+id/textView_HSV_label"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="0dp"
