--- a/app/src/main/res/layout/activity_colorpicker.xml
+++ b/app/src/main/res/layout/activity_colorpicker.xml
@@ -47,7 +47,7 @@
     <TextView
         android:id="@+id/textView_chosen"
         style="@style/ColorPicker.Text"
-        android:text="@string/label_chosen_color"
+        android:text="@string/colorpicker_chosen_label"
 
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/imageButton_chosen"
@@ -69,7 +69,7 @@
     <TextView
         android:id="@+id/textView_favorites"
         style="@style/ColorPicker.Text"
-        android:text="@string/label_favorites"
+        android:text="@string/colorpicker_favorites_label"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout_favorites"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -79,7 +79,7 @@
     <TextView
         android:id="@+id/textView_RGB_label"
         style="@style/ColorPicker.Text"
-        android:text="@string/RGB"
+        android:text="@string/colorpicker_RGB"
         android:layout_marginTop="32dp"
         android:layout_marginRight="8dp"
         app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView"
@@ -88,7 +88,7 @@
     <TextView
         android:id="@+id/textView_RGB_value"
         style="@style/ColorPicker.Text"
-        tools:text="@string/RGB_VAL"
+        tools:text="@string/colorpicker_RGB_VAL"
         android:layout_marginTop="8dp"
         android:layout_marginRight="8dp"
         app:layout_constraintTop_toBottomOf="@+id/textView_RGB_label"
@@ -97,7 +97,7 @@
     <TextView
         android:id="@+id/textView_HSV_label"
         style="@style/ColorPicker.Text"
-        android:text="@string/HSV"
+        android:text="@string/colorpicker_HSV"
         android:layout_marginTop="32dp"
         android:layout_marginLeft="8dp"
         app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView"
@@ -108,7 +108,7 @@
     <TextView
         android:id="@+id/textView_HSV_value"
         style="@style/ColorPicker.Text"
-        tools:text="@string/HSV_VAL"
+        tools:text="@string/colorpicker_HSV_VAL"
         android:layout_marginTop="8dp"
         android:layout_marginLeft="8dp"
         app:layout_constraintTop_toBottomOf="@+id/textView_HSV_label"
