Changed activity names to *Activity
Added "Activity" to the end of activities names

--- a/app/src/main/res/layout/activity_main_list.xml
+++ b/app/src/main/res/layout/activity_main_list.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.mborzenkov.readlaterlist.activity.MainList">
+    tools:context="com.example.mborzenkov.readlaterlist.activity.MainListActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
