--- a/app/src/main/res/layout/activity_edit_item.xml
+++ b/app/src/main/res/layout/activity_edit_item.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.example.mborzenkov.readlaterlist.activity.EditItem">
+    tools:context="com.example.mborzenkov.readlaterlist.activity.EditItemActivity">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar_edit_item"
