--- a/app/src/main/res/menu/menu_colorpicker.xml
+++ b/app/src/main/res/menu/menu_colorpicker.xml
@@ -1,6 +1,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.example.mborzenkov.readlaterlist.activity.ColorPicker">
+    tools:context="com.example.mborzenkov.readlaterlist.activity.ColorPickerActivity">
 
 </menu>
