--- a/app/src/main/res/menu/menu_edit_item.xml
+++ b/app/src/main/res/menu/menu_edit_item.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.example.mborzenkov.readlaterlist.activity.EditItem">
+    tools:context="com.example.mborzenkov.readlaterlist.activity.EditItemActivity">
     <item
         android:id="@+id/edititem_action_delete"
         android:orderInCategory="100"
