--- a/app/src/main/res/layout/content_edit_item.xml
+++ b/app/src/main/res/layout/content_edit_item.xml
@@ -9,11 +9,11 @@
     tools:showIn="@layout/activity_edit_item">
 
     <android.support.constraint.ConstraintLayout
-        style="@style/EditList.Item">
+        style="@style/EditItem.Item">
 
         <ImageButton
             android:id="@+id/ib_edit_item_color"
-            style="@style/EditList.Icon"
+            style="@style/EditItem.Icon"
             android:background="@drawable/item_color_circle"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -21,14 +21,14 @@
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/til_edit_item_description"
-            style="@style/EditList.TextInputLayout"
+            style="@style/EditItem.TextInputLayout"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent">
 
             <EditText
                 android:id="@+id/et_edit_item_description"
-                style="@style/EditList.TextField"
+                style="@style/EditItem.TextField"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:hint="@string/edititem_description_hint"
