--- a/app/src/main/res/layout/activity_main_list.xml
+++ b/app/src/main/res/layout/activity_main_list.xml
@@ -31,8 +31,8 @@
 
     <ProgressBar
         android:id="@+id/pb_main_loading"
-        android:layout_width="42dp"
-        android:layout_height="42dp"
+        android:layout_width="@dimen/size_mainlist_progressbar"
+        android:layout_height="@dimen/size_mainlist_progressbar"
         android:layout_gravity="center"
         android:visibility="invisible" />
 
