--- a/app/src/main/res/values-land/styles.xml
+++ b/app/src/main/res/values-land/styles.xml
@@ -2,11 +2,27 @@
 
     <!-- Base application theme. -->
     <style name="ColorPicker.ColoredCircle">
-        <item name="android:layout_width">80dp</item>
-        <item name="android:layout_height">80dp</item>
-        <item name="android:layout_marginLeft">32dp</item>
-        <item name="android:layout_marginTop">20dp</item>
-        <item name="android:layout_marginRight">32dp</item>
+        <item name="android:layout_width">@dimen/size_colorpicker_coloredcircle</item>
+        <item name="android:layout_height">@dimen/size_colorpicker_coloredcircle</item>
+        <item name="android:layout_marginLeft">@dimen/margin_colorpicker_coloredcircle</item>
+        <item name="android:layout_marginTop">@dimen/margintop_colorpicker_coloredcircle</item>
+        <item name="android:layout_marginRight">@dimen/margin_colorpicker_coloredcircle</item>
+    </style>
+    <style name="ColorPicker.Text.Label.RGB">
+        <item name="android:layout_marginTop">@dimen/margintop_colorpicker_textrgb</item>
+        <item name="android:layout_marginLeft">@dimen/margin_colorpicker_textlabels</item>
+        <item name="android:text">@string/colorpicker_RGB</item>
+    </style>
+    <style name="ColorPicker.Text.Value.RGB">
+        <item name="android:layout_marginTop">@dimen/margintop_colorpicker_textrgb</item>
+        <item name="android:layout_marginLeft">@dimen/margin_colorpicker_textvalues</item>
+    </style>
+    <style name="ColorPicker.Text.Label.HSV">
+        <item name="android:layout_marginLeft">@dimen/margin_colorpicker_textlabels</item>
+        <item name="android:text">@string/colorpicker_HSV</item>
+    </style>
+    <style name="ColorPicker.Text.Value.HSV">
+        <item name="android:layout_marginLeft">@dimen/margin_colorpicker_textvalues</item>
     </style>
 
 </resources>
