--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,7 +1,6 @@
 <resources>
 
-    <!-- Divider -->
-    <dimen name="height_divider">1dp</dimen>
+    <dimen name="height_divider">1px</dimen>
 
     <!-- MainListActivity -->
     <dimen name="padding_mainlist_list">8dp</dimen>
