--- a/app/src/main/res/layout/activity_colorpicker.xml
+++ b/app/src/main/res/layout/activity_colorpicker.xml
@@ -38,7 +38,8 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView"
         tools:background="@drawable/colorpicker_circle"
-        app:srcCompat="@drawable/ic_check_24dp"/>
+        app:srcCompat="@drawable/ic_check_24dp"
+        android:contentDescription="@string/colorpicker_chosen_label"/>
 
     <TextView
         android:id="@+id/textView_chosen"
