--- a/app/src/main/res/layout/content_colorpicker_favorites.xml
+++ b/app/src/main/res/layout/content_colorpicker_favorites.xml
@@ -15,7 +15,8 @@
         android:onClick="clickOnFavSquare"
         android:clickable="true"
         android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:contentDescription="@string/colorpicker_favorites_label"/>
 
     <ImageView
         android:id="@+id/imageView_fav_star"
@@ -23,7 +24,8 @@
         app:srcCompat="@android:drawable/btn_star"
         android:layout_alignTop="@+id/imageButton_favorite_color"
         android:layout_alignRight="@+id/imageButton_favorite_color"
-        android:layout_alignEnd="@+id/imageButton_favorite_color" />
+        android:layout_alignEnd="@+id/imageButton_favorite_color"
+        tools:ignore="ContentDescription"/>
 
 
 </RelativeLayout>
