--- a/app/src/main/res/layout/content_mainlist_item.xml
+++ b/app/src/main/res/layout/content_mainlist_item.xml
@@ -10,12 +10,13 @@
         style="@style/MainList.Icon"
         android:background="@drawable/mainlist_circle"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:contentDescription="@string/mainlist_icon_contentdescription"/>
 
     <TextView
         android:id="@+id/tv_item_label"
         style="@style/MainList.PrimaryText"
-        android:text="TextView"
+        tools:text="TextView"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
@@ -23,7 +24,7 @@
     <TextView
         android:id="@+id/tv_item_description"
         style="@style/MainList.SecondaryText"
-        android:text="TextView"
+        tools:text="TextView"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_item_label"/>
