--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources tools:keep="@color/*" xmlns:tools="http://schemas.android.com/tools">
     <!-- Главные цвета приложения -->
     <color name="primary">#4CAF50</color>
     <color name="primary_dark">#388E3C</color>
