--- a/app/src/main/res/layout/activity_mainlist.xml
+++ b/app/src/main/res/layout/activity_mainlist.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
+<android.support.v4.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -7,33 +7,39 @@
     android:layout_height="match_parent"
     tools:context="com.example.mborzenkov.readlaterlist.activity.MainListActivity">
 
-    <LinearLayout
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar_main_list"
-            style="@style/Toolbar" />
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar_main_list"
+                style="@style/Toolbar" />
 
-        <ListView
-            android:id="@+id/listview_main_list"
-            style="@style/MainList.List" />
+            <ListView
+                android:id="@+id/listview_main_list"
+                style="@style/MainList.List" />
 
-    </LinearLayout>
+        </LinearLayout>
 
-    <include layout="@layout/content_mainlist_empty" />
+        <include layout="@layout/content_mainlist_empty" />
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab_item_add"
-        style="@style/MainList.FABAdd"
-        app:srcCompat="@drawable/ic_add_24dp" />
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fab_item_add"
+            style="@style/MainList.FABAdd"
+            app:srcCompat="@drawable/ic_add_24dp" />
 
-    <ProgressBar
-        android:id="@+id/pb_main_loading"
-        android:layout_width="@dimen/size_mainlist_progressbar"
-        android:layout_height="@dimen/size_mainlist_progressbar"
-        android:layout_gravity="center"
-        android:visibility="invisible" />
+        <ProgressBar
+            android:id="@+id/pb_main_loading"
+            android:layout_width="@dimen/size_mainlist_progressbar"
+            android:layout_height="@dimen/size_mainlist_progressbar"
+            android:layout_gravity="center"
+            android:visibility="invisible" />
+    </FrameLayout>
 
-</android.support.design.widget.CoordinatorLayout>
+    <include layout="@layout/drawer_mainlist" />
+
+</android.support.v4.widget.DrawerLayout>
