--- a/app/src/main/res/menu/menu_mainlist.xml
+++ b/app/src/main/res/menu/menu_mainlist.xml
@@ -5,21 +5,10 @@
 
     <item
         android:id="@+id/mainlist_action_search"
+        android:icon="@drawable/ic_search_24dp"
         android:orderInCategory="1"
         android:title="@string/mainlist_menu_search"
         app:actionViewClass="android.support.v7.widget.SearchView"
-        app:showAsAction="collapseActionView"/>
-
-    <item
-        android:id="@+id/mainlist_action_delete_all"
-        android:orderInCategory="100"
-        android:title="@string/mainlist_menu_delete_all"
-        app:showAsAction="never" />
-
-    <item
-        android:id="@+id/mainlist_action_add_placeholders"
-        android:orderInCategory="100"
-        android:title="@string/mainlist_menu_add_placeholders"
-        app:showAsAction="never" />
+        app:showAsAction="collapseActionView|ifRoom"/>
 
 </menu>
